Usuarios: perfil desde claims de Azure AD, roles, RDS y tests