@@ -4,13 +4,11 @@ import com.backend.dto.UsuarioRequest;
 import com.backend.dto.UsuarioResponse;
 import com.backend.model.UsuarioModel;
 import com.backend.repository.UsuarioRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * ==========================================
@@ -21,55 +19,39 @@ import java.util.stream.Collectors;
 public class UsuarioService {
 
     private final UsuarioRepository usuarioRepository;
-    private final PasswordEncoder passwordEncoder;
 
-    @Autowired
-    public UsuarioService(UsuarioRepository usuarioRepository, PasswordEncoder passwordEncoder) {
+    public UsuarioService(UsuarioRepository usuarioRepository) {
         this.usuarioRepository = usuarioRepository;
-        this.passwordEncoder = passwordEncoder;
+    }
+
+    /** Crea o actualiza el perfil a partir de los claims del token. */
+    @Transactional
+    public UsuarioResponse sincronizar(String azureOid, String nombre, String email, String rol) {
+        UsuarioModel usuario = usuarioRepository.findByAzureOid(azureOid)
+                .orElseGet(() -> UsuarioModel.builder().azureOid(azureOid).build());
+        usuario.setNombre(nombre);
+        usuario.setEmail(email);
+        usuario.setRol(rol);
+        return mapToResponse(usuarioRepository.save(usuario));
     }
 
     public List<UsuarioResponse> obtenerTodos() {
-        return usuarioRepository.findAll().stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+        return usuarioRepository.findAll().stream().map(this::mapToResponse).toList();
     }
 
     public Optional<UsuarioResponse> obtenerPorId(Long id) {
         return usuarioRepository.findById(id).map(this::mapToResponse);
     }
 
-    public UsuarioResponse crear(UsuarioRequest request) {
-        if (usuarioRepository.existsByEmail(request.getEmail())) {
-            throw new IllegalArgumentException("El email ya está registrado");
-        }
-
-        UsuarioModel nuevoUsuario = UsuarioModel.builder()
-                .nombre(request.getNombre())
-                .email(request.getEmail())
-                .password(passwordEncoder.encode(request.getPassword()))
-                .rol(request.getRol() != null ? request.getRol() : "ROLE_USER")
-                .build();
-
-        UsuarioModel guardado = usuarioRepository.save(nuevoUsuario);
-        return mapToResponse(guardado);
-    }
-
+    @Transactional
     public Optional<UsuarioResponse> actualizar(Long id, UsuarioRequest request) {
         return usuarioRepository.findById(id).map(usuario -> {
             usuario.setNombre(request.getNombre());
-            usuario.setEmail(request.getEmail());
-            if (request.getPassword() != null && !request.getPassword().isBlank()) {
-                usuario.setPassword(passwordEncoder.encode(request.getPassword()));
-            }
-            if (request.getRol() != null) {
-                usuario.setRol(request.getRol());
-            }
-            UsuarioModel actualizado = usuarioRepository.save(usuario);
-            return mapToResponse(actualizado);
+            return mapToResponse(usuarioRepository.save(usuario));
         });
     }
 
+    @Transactional
     public boolean eliminar(Long id) {
         if (usuarioRepository.existsById(id)) {
             usuarioRepository.deleteById(id);
@@ -78,12 +60,13 @@ public class UsuarioService {
         return false;
     }
 
-    private UsuarioResponse mapToResponse(UsuarioModel usuario) {
+    private UsuarioResponse mapToResponse(UsuarioModel u) {
         return UsuarioResponse.builder()
-                .id(usuario.getId())
-                .nombre(usuario.getNombre())
-                .email(usuario.getEmail())
-                .rol(usuario.getRol())
+                .id(u.getId())
+                .azureOid(u.getAzureOid())
+                .nombre(u.getNombre())
+                .email(u.getEmail())
+                .rol(u.getRol())
                 .build();
     }
 }
